--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    <p class="description"></p>
 
 
-   <scirpt src="script.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
 
