am adaugat un review

--- a/reviews.html
+++ b/reviews.html
@@ -34,11 +34,11 @@
             <span class="star">&#9733</span>
         </p>
 
-        <p>pets</p>
+        <p>Dogs</p>
     </div>
 
     <div class="review">
-        <h2>film</h2>
+        <h2>Films</h2>
         <p class="rating">
             <span class="star">&#9733</span>
             <span class="star">&#9733</span>
@@ -47,11 +47,11 @@
             <span class="star">&#9734</span>
         </p>
 
-        <p>film</p>
+        <p>Action & Horror</p>
     </div>
 
     <div class="review">
-        <h2>destinatie</h2>
+        <h2>Destination</h2>
         <p class="rating">
             <span class="star">&#9733</span>
             <span class="star">&#9733</span>
@@ -60,11 +60,11 @@
             <span class="star">&#9734</span>
         </p>
 
-        <p>destinatie</p>
+        <p>Travelling</p>
     </div>
 
     <div class="review">
-        <h2>sport</h2>
+        <h2>Sport</h2>
         <p class="rating">
             <span class="star">&#9733</span>
             <span class="star">&#9733</span>
@@ -73,7 +73,20 @@
             <span class="star">&#9734</span>
         </p>
 
-        <p>sport</p>
+        <p>Physical Effort</p>
+    </div>
+
+    <div class="review">
+        <h2>Experience</h2>
+        <p class="rating">
+            <span class="star">&#9733</span>
+            <span class="star">&#9733</span>
+            <span class="star">&#9733</span>
+            <span class="star">&#9733</span>
+            <span class="star">&#9733</span>
+        </p>
+
+        <p>Acest site a fost făcut în timpul cursului The Girls Code Breaking Barriers. Mi-a plăcut foarte mult, trainerii ne-au explicat totul cu răbdare și ne-au ajutat la ceea ce nu reușeam fără a se supăra. Recomand din tot sufletul. &#x2665 </p>
     </div>
 
     <script src="script.js"></script>
