am adaugat o descriere

--- a/index.html
+++ b/index.html
@@ -38,30 +38,30 @@
     <p><a href="https://www.bing.com/videos/riverview/relatedvideo?pc=MOZI&q=dog+video&ru=%2fsearch%3fpc%3dMOZI%26form%3dMOZLBR%26q%3ddog%2bvideo&mmscn=vwrc&mid=9DB8D47DD81D0BCA884C9DB8D47DD81D0BCA884C&FORM=WRVORC&ntb=1&msockid=c0d064de12e411f0a067af6c285df93d">Click aici pentru videoclipuri amuzante cu căței  -- ></a></p>
 
    <h1 style = "color: rgb(174, 72, 13); font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, Times, serif" class="title">Watching movies</h1>
-   <h5 class="undertitle first">film</h5>
+   <h5 class="undertitle first">Film</h5>
    <h5 class="undertitle">Added by</h5>
    <h5 class="undertitle">Samoila Daria Beatrice</h5>
    <h5 class="undertitle">Feb 25, 2025</h5>
    <img src="film.jpg" class="image">
-   <p class="description"></p>
+   <p class="description">Filemele sunt un mod plăcut de a-ți petrece timpul liber. Eu prefer filmele de acțiune și de groază, însă prefer să citesc cartea înainte, dacă am posibilitatea.</p>
 
 
    <h1 style = "color: rgb(174, 72, 13); font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, Times, serif" class="title">Travelling</h1>
-   <h5 class="undertitle first">destinatie</h5>
+   <h5 class="undertitle first">Destination</h5>
    <h5 class="undertitle">Added by</h5>
    <h5 class="undertitle">Samoila Daria Beatrice</h5>
    <h5 class="undertitle">Feb 25, 2025</h5>
    <img src="destinatie.jpg" class="image">
-   <p class="description"></p>
+   <p class="description">Călătoriile sunt de asemenea un mod plăcut de a-ți petrece timpul liber, dar și o oportunitate de a învăța lucruri noi.</p>
 
 
    <h1 style = "color: rgb(174, 72, 13); font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, Times, serif" class="title">Doing sports</h1>
-   <h5 class="undertitle first">sport</h5>
+   <h5 class="undertitle first">Sport</h5>
    <h5 class="undertitle">Added by</h5>
    <h5 class="undertitle">Samoila Daria Beatrice</h5>
    <h5 class="undertitle">Feb 25, 2025</h5>
    <img src="sport.jpg" class="image">
-   <p class="description"></p>
+   <p class="description">Sportul este esențial pentru o viață sănătoasă.</p>
 
 
    <script src="script.js"></script>
