am schimbat fontul unui text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <h5 class="undertitle">Samoila Daria Beatrice</h5>
    <h5 class="undertitle">Feb 25, 2025</h5>
    <img src="film.jpg" class="image">
-   <p class="description">Filemele sunt un mod plăcut de a-ți petrece timpul liber. Eu prefer filmele de acțiune și de groază, însă prefer să citesc cartea înainte, dacă am posibilitatea.</p>
+   <p class="description"; style="color:rgb(174, 72, 13)">Filemele sunt un mod plăcut de a-ți petrece timpul liber. Eu prefer filmele de acțiune și de groază, însă prefer să citesc cartea înainte, dacă am posibilitatea.</p>
 
 
    <h1 style = "color: rgb(174, 72, 13); font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, Times, serif" class="title">Travelling</h1>
@@ -52,7 +52,7 @@
    <h5 class="undertitle">Samoila Daria Beatrice</h5>
    <h5 class="undertitle">Feb 25, 2025</h5>
    <img src="destinatie.jpg" class="image">
-   <p class="description">Călătoriile sunt de asemenea un mod plăcut de a-ți petrece timpul liber, dar și o oportunitate de a învăța lucruri noi.</p>
+   <p class="description"; style="color:rgb(174, 72, 13)">Călătoriile sunt de asemenea un mod plăcut de a-ți petrece timpul liber, dar și o oportunitate de a învăța lucruri noi.</p>
 
 
    <h1 style = "color: rgb(174, 72, 13); font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif, Times, serif" class="title">Doing sports</h1>
@@ -61,7 +61,7 @@
    <h5 class="undertitle">Samoila Daria Beatrice</h5>
    <h5 class="undertitle">Feb 25, 2025</h5>
    <img src="sport.jpg" class="image">
-   <p class="description">Sportul este esențial pentru o viață sănătoasă.</p>
+   <p class="description"; style="color:rgb(174, 72, 13)">Sportul este esențial pentru o viață sănătoasă.</p>
 
 
    <script src="script.js"></script>
